force-app/main/default/objects/FifthSetConfirm__c/FifthSetConfirm__c.object-meta.xml
<CustomObject>
    <label>5点確定</label>
    <nameField>
        <displayFormat>FS-{000000000}</displayFormat>
        <label>5点確定名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>