force-app/main/default/objects/FifthSetConfirm__c/fields/AccompanyingDocumentName5__c.field-meta.xml
<CustomField>
    <fullName>AccompanyingDocumentName5__c</fullName>
    <label>付随書類名５</label>
    <length>255</length>
    <type>Text</type>
</CustomField>