force-app/main/default/objects/FifthSetConfirm__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>5点確定 (企業名)</relationshipLabel>
    <relationshipName>Account_FifthSetConfirm</relationshipName>
    <type>Lookup</type>
</CustomField>