force-app/main/default/objects/FifthSetConfirm__c/fields/AdvancedPaymentEndMonth__c.field-meta.xml
<CustomField>
    <fullName>AdvancedPaymentEndMonth__c</fullName>
    <label>翌月以降前納終了月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>