force-app/main/default/objects/FifthSetConfirm__c/fields/AgencyChargesDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>AgencyChargesDiscountRate__c</fullName>
    <formula>AgencyChargesDiscountAmount__c  /  Rent__c</formula>
    <label>仲介手数料割引率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>