force-app/main/default/objects/FifthSetConfirm__c/fields/AgencyCommission__c.field-meta.xml
<CustomField>
    <fullName>AgencyCommission__c</fullName>
    <label>請求_仲介手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>