force-app/main/default/objects/FifthSetConfirm__c/fields/AgencyCommissionAccount__c.field-meta.xml
<CustomField>
    <fullName>AgencyCommissionAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>仲介手数料_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation13</relationshipName>
    <type>Lookup</type>
</CustomField>