force-app/main/default/objects/FifthSetConfirm__c/fields/AgencyCommissionTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>AgencyCommissionTaxCategory__c</fullName>
    <label>仲介手数料税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxCategoryBpo</valueSetName>
    </valueSet>
</CustomField>