force-app/main/default/objects/FifthSetConfirm__c/fields/AgencyName__c.field-meta.xml
<CustomField>
    <fullName>AgencyName__c</fullName>
    <label>仲介会社名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>