force-app/main/default/objects/FifthSetConfirm__c/fields/AmortisationDepreciationUnsettled__c.field-meta.xml
<CustomField>
    <fullName>AmortisationDepreciationUnsettled__c</fullName>
    <label>敷引/償却_未確定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>