force-app/main/default/objects/FifthSetConfirm__c/fields/AntisocialCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AntisocialCorrespondence__c</fullName>
    <label>反社対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>反社覚書（SNT）</fullName>
            </value>
            <value>
                <fullName>反社ハンコ（SNT）OK</fullName>
            </value>
            <value>
                <fullName>反社追記（手書き）OK</fullName>
            </value>
            <value>
                <fullName>貸主契約書に条文有り</fullName>
            </value>
            <value>
                <fullName>取交し済</fullName>
            </value>
            <value>
                <fullName>原始契約書に条文有り</fullName>
            </value>
            <value>
                <fullName>反社不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>