force-app/main/default/objects/FifthSetConfirm__c/fields/ApprovalApplicationNote2__c.field-meta.xml
<CustomField>
    <fullName>ApprovalApplicationNote2__c</fullName>
    <label>決裁申請備考②</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>