force-app/main/default/objects/FifthSetConfirm__c/fields/BillingContractMoneyTotal__c.field-meta.xml
<CustomField>
    <fullName>BillingContractMoneyTotal__c</fullName>
    <formula>ContractMoneyPaymentAmount1__c + ContractMoneyPaymentAmount2__c + ContractMoneyPaymentAmount3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求_契約金合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>