force-app/main/default/objects/FifthSetConfirm__c/fields/BillingDepositAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingDepositAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求保証金_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>