force-app/main/default/objects/FifthSetConfirm__c/fields/BillingKeyMoneyAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingKeyMoneyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求権利金_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>