force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthCommonCharge__c</fullName>
    <label>請求_次月共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>