force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthCommonChargeAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthCommonChargeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求翌月共益費_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation11</relationshipName>
    <type>Lookup</type>
</CustomField>