force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthCommonChargeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthCommonChargeTaxCategory__c</fullName>
    <label>請求次月共益費税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>