force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthManagementChargeAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthManagementChargeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求翌月管理費_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation10</relationshipName>
    <type>Lookup</type>
</CustomField>