force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthManagementTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthManagementTaxCategory__c</fullName>
    <label>請求_次月管理費税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>