force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthParkingFee__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthParkingFee__c</fullName>
    <label>請求_次月駐車場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>