force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthParkingFeeAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthParkingFeeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求翌月駐車場_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>5点確定 (請求翌月駐車場代_送金先口座)</relationshipLabel>
    <relationshipName>FifthSetConfirmBankAccountRelation12</relationshipName>
    <type>Lookup</type>
</CustomField>