force-app/main/default/objects/FifthSetConfirm__c/fields/BillingNextMonthRentAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthRentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求翌月家賃_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation9</relationshipName>
    <type>Lookup</type>
</CustomField>