force-app/main/default/objects/FifthSetConfirm__c/fields/BillingReward__c.field-meta.xml
<CustomField>
    <fullName>BillingReward__c</fullName>
    <label>請求_礼金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>