force-app/main/default/objects/FifthSetConfirm__c/fields/BillingRewardAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingRewardAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求礼金_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>