force-app/main/default/objects/FifthSetConfirm__c/fields/BillingSecurityDepositAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingSecurityDepositAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求敷金_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>