force-app/main/default/objects/FifthSetConfirm__c/fields/BillingThisMonthCommonChargeAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthCommonChargeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求当月共益費_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation7</relationshipName>
    <type>Lookup</type>
</CustomField>