force-app/main/default/objects/FifthSetConfirm__c/fields/BillingThisMonthCommonChargeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthCommonChargeTaxCategory__c</fullName>
    <label>請求_当月共益費税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>