force-app/main/default/objects/FifthSetConfirm__c/fields/BillingThisMonthManagementChargeAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthManagementChargeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求当月管理費_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>