force-app/main/default/objects/FifthSetConfirm__c/fields/BillingThisMonthParkingFeeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthParkingFeeTaxCategory__c</fullName>
    <label>請求当月駐車場税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxCategoryBpo</valueSetName>
    </valueSet>
</CustomField>