force-app/main/default/objects/FifthSetConfirm__c/fields/BillingThisMonthRentAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthRentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求当月家賃_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>