force-app/main/default/objects/FifthSetConfirm__c/fields/BillingThisMonthRentTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthRentTaxCategory__c</fullName>
    <label>請求当月家賃税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>