force-app/main/default/objects/FifthSetConfirm__c/fields/CancelMonthPayment__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthPayment__c</fullName>
    <label>解約月賃料計算方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment</valueSetName>
    </valueSet>
</CustomField>