force-app/main/default/objects/FifthSetConfirm__c/fields/CancelMonthRentOther__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthRentOther__c</fullName>
    <label>解約月賃料(その他)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>