force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountBank1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBank1__c</fullName>
    <label>契約金送金口座1_銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>