force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountBank2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBank2__c</fullName>
    <label>契約金送金口座2_銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>