force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountBankNum2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBankNum2__c</fullName>
    <label>契約金送金口座2_銀行番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>