force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountBranchOffice1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBranchOffice1__c</fullName>
    <label>契約金送金口座1_支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>