force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountBranchOffice2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBranchOffice2__c</fullName>
    <label>契約金送金口座2_支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>