force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountContractor2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountContractor2__c</fullName>
    <label>契約金送金口座2_名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>