force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountContractorKana1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountContractorKana1__c</fullName>
    <label>契約金送金口座1_名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>