force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountContractorKana3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountContractorKana3__c</fullName>
    <label>契約金送金口座3_名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>