force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountId2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountId2__c</fullName>
    <externalId>true</externalId>
    <label>契約金送金口座2_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>