force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountId3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountId3__c</fullName>
    <label>契約金送金口座3_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>