force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountNum1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountNum1__c</fullName>
    <label>契約金送金口座1_番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>