force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountNum3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountNum3__c</fullName>
    <label>契約金送金口座3_番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>