force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyBankAccountType3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountType3__c</fullName>
    <label>契約金送金口座3_種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountType</valueSetName>
    </valueSet>
</CustomField>