force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyPaymentAmount1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyPaymentAmount1__c</fullName>
    <label>契約金送金1_支払金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>