force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyTotal__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyTotal__c</fullName>
    <formula>BillingSecurityDeposit__c  +  BillingReward__c  +  BillingThisMonthRent__c  + BillingThisMonthManagementCharge__c  +  BillingThisMonthCommonCharge__c  +  BillingThisMonthParkingFee__c  +  BillingNextMonthRent__c  +  BillingNextMonthManagementCharge__c  +  BillingNextMonthCommonCharge__c  +  BillingNextMonthParkingFee__c  +  AgencyCommission__c  +  OtherBillingAmount1__c  +  OtherBillingAmount2__c  +  OtherBillingAmount3__c  +  OtherBillingAmount4__c  +  OtherBillingAmount5__c  +  OtherBillingAmount6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約金計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>