force-app/main/default/objects/FifthSetConfirm__c/fields/ContractMoneyTransferDueDate__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyTransferDueDate__c</fullName>
    <label>契約金振込日</label>
    <type>Date</type>
</CustomField>