force-app/main/default/objects/FifthSetConfirm__c/fields/ContractProcedure__c.field-meta.xml
<CustomField>
    <fullName>ContractProcedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約手続き</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>5点確定 (契約手続き)</relationshipLabel>
    <relationshipName>ContractProcedure_FifthSetConfirm</relationshipName>
    <type>Lookup</type>
</CustomField>