force-app/main/default/objects/FifthSetConfirm__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>契約種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>確認中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>