force-app/main/default/objects/FifthSetConfirm__c/fields/CorporateHousingStaffName__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingStaffName__c</fullName>
    <formula>NewMatter__r.CorporateHousingStaff__r.LastName &amp; NewMatter__r.CorporateHousingStaff__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社宅担当者名</label>
    <type>Text</type>
</CustomField>