force-app/main/default/objects/FifthSetConfirm__c/fields/DailyRateCalcFormula__c.field-meta.xml
<CustomField>
    <fullName>DailyRateCalcFormula__c</fullName>
    <label>日割計算式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>