force-app/main/default/objects/FifthSetConfirm__c/fields/DailyRateOccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>DailyRateOccurrenceDate__c</fullName>
    <label>日割発生日</label>
    <type>Date</type>
</CustomField>