force-app/main/default/objects/FifthSetConfirm__c/fields/delBillingNextMonthParkingFeeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>delBillingNextMonthParkingFeeTaxCategory__c</fullName>
    <label>請求_次月駐車場税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>