force-app/main/default/objects/FifthSetConfirm__c/fields/delDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>delDiscountAmount__c</fullName>
    <label>（不要）値引き金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>