force-app/main/default/objects/FifthSetConfirm__c/fields/delOtherBillingTaxCategory5__c.field-meta.xml
<CustomField>
    <fullName>delOtherBillingTaxCategory5__c</fullName>
    <label>請求_その他5税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>