force-app/main/default/objects/FifthSetConfirm__c/fields/delParkingFeeTaxType__c.field-meta.xml
<CustomField>
    <fullName>delParkingFeeTaxType__c</fullName>
    <label>駐車場_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>