force-app/main/default/objects/FifthSetConfirm__c/fields/delRentFixedCostTaxCategory4__c.field-meta.xml
<CustomField>
    <fullName>delRentFixedCostTaxCategory4__c</fullName>
    <label>月額固定費4_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>