force-app/main/default/objects/FifthSetConfirm__c/fields/delTokutokuAgencyChargesAmount_del__c.field-meta.xml
<CustomField>
    <fullName>delTokutokuAgencyChargesAmount_del__c</fullName>
    <formula>IF ( ISPICKVAL( delTokutokuServiceReductionExpenseItems__c , &quot;仲介手数料&quot;) , delDiscountAmount__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（不要）得々サービス仲介手数料＿金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>