force-app/main/default/objects/FifthSetConfirm__c/fields/delTokutokuServiceReductionExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>delTokutokuServiceReductionExpenseItems__c</fullName>
    <label>（不要）得々サービス減額費目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>フリーレント</fullName>
            </value>
            <value>
                <fullName>礼金</fullName>
            </value>
            <value>
                <fullName>仲介手数料</fullName>
            </value>
            <value>
                <fullName>敷引/償却</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>