force-app/main/default/objects/FifthSetConfirm__c/fields/DepositAmortisationAccount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmortisationAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>敷引/償却_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>5点確定 (敷引/償却_送金先口座)</relationshipLabel>
    <relationshipName>FifthSetConfirmBankAccountRelation23</relationshipName>
    <type>Lookup</type>
</CustomField>