force-app/main/default/objects/FifthSetConfirm__c/fields/DepositOrAmortisation__c.field-meta.xml
<CustomField>
    <fullName>DepositOrAmortisation__c</fullName>
    <label>敷金/敷引</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>