force-app/main/default/objects/FifthSetConfirm__c/fields/deTokutokuAmortisationDepreciationAmount__c.field-meta.xml
<CustomField>
    <fullName>deTokutokuAmortisationDepreciationAmount__c</fullName>
    <formula>IF(OR(ISPICKVAL(delTokutokuServiceReductionExpenseItems__c , &quot;礼金&quot;),
ISPICKVAL(delTokutokuServiceReductionExpenseItems__c , &quot;敷引/償却&quot;)), delDiscountAmount__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（不要）得々サービス礼金敷引償却＿金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>