force-app/main/default/objects/FifthSetConfirm__c/fields/FloorPlanType__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanType__c</fullName>
    <label>間取り_タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>