force-app/main/default/objects/FifthSetConfirm__c/fields/FreeRentDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>FreeRentDiscountRate__c</fullName>
    <formula>FreeRentDiscountAmount__c   /  Rent__c</formula>
    <label>フリーレント割引率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>