force-app/main/default/objects/FifthSetConfirm__c/fields/GarageAmortisationDepreciation__c.field-meta.xml
<CustomField>
    <fullName>GarageAmortisationDepreciation__c</fullName>
    <label>駐車場敷引/償却</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>