force-app/main/default/objects/FifthSetConfirm__c/fields/GarageAmortisationDepreciationTreatment__c.field-meta.xml
<CustomField>
    <fullName>GarageAmortisationDepreciationTreatment__c</fullName>
    <label>駐車場敷引/償却扱い</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>確認中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>