force-app/main/default/objects/FifthSetConfirm__c/fields/GarageReward__c.field-meta.xml
<CustomField>
    <fullName>GarageReward__c</fullName>
    <label>駐車場礼金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>