force-app/main/default/objects/FifthSetConfirm__c/fields/IrregularOther1__c.field-meta.xml
<CustomField>
    <fullName>IrregularOther1__c</fullName>
    <label>その他①</label>
    <type>TextArea</type>
</CustomField>