force-app/main/default/objects/FifthSetConfirm__c/fields/IrregularSNTAgencyUnavailable__c.field-meta.xml
<CustomField>
    <fullName>IrregularSNTAgencyUnavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SNT代行不可</label>
    <type>Checkbox</type>
</CustomField>