force-app/main/default/objects/FifthSetConfirm__c/fields/IsBuildingStatusResearch__c.field-meta.xml
<CustomField>
    <fullName>IsBuildingStatusResearch__c</fullName>
    <label>建物状況調査の有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>