force-app/main/default/objects/FifthSetConfirm__c/fields/IsCheckDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>IsCheckDiscountRate__c</fullName>
    <formula>IF (  TotalDiscountRate__c  &lt;  TokutokuServiceApplyRate__c , &quot;得々サービスの割引率を満たせていません。&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>割引率確認</label>
    <type>Text</type>
</CustomField>