force-app/main/default/objects/FifthSetConfirm__c/fields/IsPersonalReason__c.field-meta.xml
<CustomField>
    <fullName>IsPersonalReason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自己都合</label>
    <type>Checkbox</type>
</CustomField>