force-app/main/default/objects/FifthSetConfirm__c/fields/IsRemoteAccessEnableFlg__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnableFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>在宅非表示フラグ</label>
    <type>Checkbox</type>
</CustomField>