force-app/main/default/objects/FifthSetConfirm__c/fields/IsTransferChargesPartnerPay3__c.field-meta.xml
<CustomField>
    <fullName>IsTransferChargesPartnerPay3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>振込手数料先方負担_契約金口座3</label>
    <type>Checkbox</type>
</CustomField>