force-app/main/default/objects/FifthSetConfirm__c/fields/LenderCancelNotice__c.field-meta.xml
<CustomField>
    <fullName>LenderCancelNotice__c</fullName>
    <label>貸主解約予告</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>