force-app/main/default/objects/FifthSetConfirm__c/fields/LenderCancelNoticeUnit__c.field-meta.xml
<CustomField>
    <fullName>LenderCancelNoticeUnit__c</fullName>
    <label>貸主解約予告_単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>月</fullName>
            </value>
            <value>
                <fullName>年</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>