force-app/main/default/objects/FifthSetConfirm__c/fields/ManagementCompanyEmailAdress__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyEmailAdress__c</fullName>
    <label>管理会社_メールアドレス</label>
    <type>Email</type>
</CustomField>