force-app/main/default/objects/FifthSetConfirm__c/fields/ManagementCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyName__c</fullName>
    <label>管理会社名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>